the current thread attributes (normally interruptible). Various examples
occur in the Isabelle sources (.ML and .thy files).

* Isabelle/ML explicitly rejects 'handle' with catch-all patterns.
INCOMPATIBILITY, better use \<^try>\<open>...\<close> with 'catch' or 'finally', or
as last resort declare [[ML_catch_all]] within the theory context.


*** HOL ***

* Mirabelle:
  - Removed proof reconstruction from "sledgehammer" action; the related option
  "proof_method" was removed. Proof reconstruction is supported directly
  by Sledgehammer and should be used instead. For more information, see
  Sledgehammer's documentation relating to "preplay_timeout". INCOMPATIBILITY.



New in Isabelle2023 (September 2023)
------------------------------------

*** General ***

* Toplevel results --- like declared consts and proven theorems --- are
printed as regular "writeln" message instead of "state", which is no
specifically for proof states. This affects Isabelle/jEdit panels for
Output vs. State in particular.

* Session build dependencies (sources and heaps) are now recorded in
more details, with one SHA1 digest per file and a symbolic version of
the file name -- similar to the Unix command-line tool "sha1sum". For
portability of results, well-known directory names are folded into path
variables according to cumulative "isabelle_directory" declarations in
etc/settings (user projects may add to that). See also "isabelle getenv
ISABELLE_DIRECTORIES" for the effective result, which is used by the
Isabelle/Scala function isabelle.File.symbolic_path() for its
first-match policy in reverse order.

* ML heap usage and stored heap size has been significantly reduced,
especially for applications with a lot 'locale' or 'class' context
switches, e.g. "definition (in loc)". The shrink factor is usually in
the range 1.1 .. 2.0, but a factor 2 .. 25 has been seen as well. This
often allows big applications to return to the "small" 64_32 memory